<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/share_menu_button"
        android:icon="@drawable/ic_share_menu_button"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/notification_menu_button"
        android:icon="@drawable/ic_notification_menu_button"
        android:title="@string/set_notification"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete_all"
        android:icon="@drawable/ic_delete_all_icon"
        android:title="@string/delete_all_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/cancel_all"
        android:icon="@drawable/ic_cancel_all_icon"
        android:title="@string/cancel_all_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/buy_all"
        android:icon="@drawable/ic_buy_all_icon"
        android:title="@string/buy_all_title"
        app:showAsAction="never" />


</menu>