<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/helpTextViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help1_1" />

        <ImageView
            style="@style/helpImageViews"
            android:src="@drawable/help1_1" />

        <TextView
            style="@style/helpTextViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help1_2" />

        <ImageView
            style="@style/helpImageViews"
            android:layout_marginBottom="16dp"
            android:src="@drawable/help1_2" />

        <TextView
            style="@style/helpTextViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help1_3" />

        <ImageView
            style="@style/helpImageViews"
            android:src="@drawable/help1_3" />

        <TextView
            style="@style/helpTextViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help1_4"/>

        <ImageView
            style="@style/helpImageViews"
            android:layout_marginBottom="16dp"
            android:src="@drawable/help1_4" />

        <TextView
            style="@style/helpTextViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help1_5" />

        <ImageView
            style="@style/helpImageViews"
            android:src="@drawable/help1_5" />

        <TextView
            style="@style/helpTextViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help1_6"/>

        <ImageView
            style="@style/helpImageViews"
            android:layout_marginBottom="16dp"
            android:src="@drawable/help1_6" />


        <TextView
            style="@style/helpTextViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help1_7" />

        <ImageView
            style="@style/helpImageViews"
            android:src="@drawable/help1_7" />

        <TextView
            style="@style/helpTextViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help1_8"/>

        <ImageView
            style="@style/helpImageViews"
            android:layout_marginBottom="16dp"
            android:src="@drawable/help1_8" />

        <TextView
            style="@style/helpTextViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help1_9" />

        <ImageView
            style="@style/helpImageViews"
            android:src="@drawable/help1_9" />

        <TextView
            style="@style/helpTextViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help1_10"/>

    </LinearLayout>
</ScrollView>