<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/catalogs_fragment">

    <fragment
        android:id="@+id/catalogs_fragment"
        android:name="ru.netfantazii.handy.ui.catalogs.CatalogsFragment"
        android:label="@string/catalog_recycler_view_label"
        tools:layout="@layout/catalogs_fragment">
        <action
            android:id="@+id/action_catalogs_fragment_to_products_fragment"
            app:destination="@id/products_fragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_catalogs_fragment_to_map"
            app:destination="@id/notifications_fragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action
            android:id="@+id/action_catalogs_fragment_to_shareFragment"
            app:destination="@id/shareFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>
    <fragment
        android:id="@+id/products_fragment"
        android:name="ru.netfantazii.handy.ui.groupsandproducts.GroupsAndProductsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/products_fragment">
        <argument
            android:name="catalogName"
            app:argType="string" />
        <argument
            android:name="catalogId"
            app:argType="long" />
        <argument
            android:name="groupExpandStates"
            app:argType="com.h6ah4i.android.widget.advrecyclerview.expandable.RecyclerViewExpandableItemManager$SavedState" />
        <argument
            android:name="geofenceIds"
            app:argType="long[]"
            android:defaultValue="@null"
            app:nullable="true" />
        <action
            android:id="@+id/action_products_fragment_to_shareFragment"
            app:destination="@id/shareFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action
            android:id="@+id/action_products_fragment_to_notifications_fragment"
            app:destination="@id/notifications_fragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>
    <fragment
        android:id="@+id/navigation_app_settings"
        android:name="ru.netfantazii.handy.ui.preferences.AppSettings"
        android:label="@string/settings_fragment_label" />
    <action
        android:id="@+id/action_global_appSettings"
        app:destination="@id/navigation_app_settings"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    <fragment
        android:id="@+id/navigation_help_fragment"
        android:name="ru.netfantazii.handy.ui.help.HelpFragment"
        android:label="@string/help_fragment_label" />
    <action
        android:id="@+id/action_global_helpFragment"
        app:destination="@id/navigation_help_fragment"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="ru.netfantazii.handy.ui.welcome.WelcomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/welcome_fragment" />
    <action
        android:id="@+id/action_global_welcomeFragment"
        app:destination="@+id/welcomeFragment"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:launchSingleTop="true"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        app:popUpTo="@+id/catalogs_fragment" />
    <fragment
        android:id="@+id/notifications_fragment"
        android:name="ru.netfantazii.handy.ui.notifications.NotificationTabFragment"
        android:label="@string/notifications_fragment_label">
        <argument
            android:name="catalogId"
            app:argType="long" />
        <argument
            android:name="catalogName"
            app:argType="string" />
        <argument
            android:name="groupExpandStates"
            app:argType="com.h6ah4i.android.widget.advrecyclerview.expandable.RecyclerViewExpandableItemManager$SavedState" />
    </fragment>
    <fragment
        android:id="@+id/shareFragment"
        android:name="ru.netfantazii.handy.ui.share.ShareFragment"
        android:label="@string/share_fragment_label">
        <argument
            android:name="catalogId"
            app:argType="long" />
        <argument
            android:name="catalogName"
            app:argType="string" />
        <argument
            android:name="totalProducts"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/contactsFragment"
        android:name="ru.netfantazii.handy.ui.contacts.ContactsFragment"
        android:label="@string/contacts_fragment_label" />
    <action
        android:id="@+id/action_global_contactsFragment"
        app:destination="@+id/contactsFragment"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    <fragment
        android:id="@+id/premiumFragment"
        android:name="ru.netfantazii.handy.ui.premium.PremiumFragment"
        android:label="@string/premium_fragment_label"/>
    <action
        android:id="@+id/action_global_premiumFragment"
        app:destination="@+id/premiumFragment"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="ru.netfantazii.handy.ui.about.AboutFragment"
        android:label="@string/about_fragment_label" />
    <action
        android:id="@+id/action_global_aboutFragment"
        app:destination="@+id/aboutFragment"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim" />
</navigation>