<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/overlay_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/catalog_list_linear_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/HeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/catalog_recycler_view_label"
            android:textColor="?attr/listTextColor" />


        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinator_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/hint_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nothing_to_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/hint_nothing_to_show"
                    android:textColor="@color/textColorGray" />

                <TextView
                    android:id="@+id/nothing_to_show2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/hint_nothing_to_show_catalogs"
                    android:textColor="@color/textColorGray" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list"
                style="@style/RecyclerViewMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.leinardi.android.speeddial.SpeedDialView
                android:id="@+id/fab_create_catalog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                app:layout_behavior="@string/speeddial_scrolling_view_snackbar_behavior"
                app:sdMainFabClosedSrc="@drawable/ic_plus_sign" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>
</FrameLayout>